@@ -26,13 +26,13 @@ dependencies {
     implementation ('org.apache.commons:commons-dbcp2:2.12.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'commons-net:commons-net:3.11.0'
+    implementation 'commons-net:commons-net:3.11.1'
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.23.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.7'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.0'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.01'
+    implementation 'org.springframework:spring-jdbc:6.2.6'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
